--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="preload">
-        <span>Welcome to my portfolio!</span>
+        <span>Welcome to my portfolio!!</span>
     </div>
     <div>
         <h1 class="foo" data-delighter>work</h1>
